# synth_turb

./: CMakeLists.txt  README.md  synth_turb-config.cmake.in  synthetic_isotropic_turbulence_3d.hpp
include/synth_turb/: RandTurbGA17.hpp  SynthTurb3d_all_waves.hpp  SynthTurb3d_common.hpp  SynthTurb3d_periodic_box.hpp  SynthTurb3d_periodic_box_multiwave.hpp  synthetic_isotropic_turbulence_3d.hpp
tests/: CMakeLists.txt  api_test.cpp  dispersion_test.cpp  pair_separation_test.cpp  periodicity_test.cpp  plot_pair_separation_series.py
